# src/controller/WahapediaController.js
@@ -17,16 +17,4 @@ router.get('/factions', function(req, res) {
     res.end(JSON.stringify(result));    
 });
 
-router.get('/subFactions', function(req, res) {
-    logger.debug("wahapedia->subFactions get");
-    logger.debug(req.query);
-    const url = 'http://wahapedia.ru/wh40k8ed/factions/' + req.query.faction + '/';
-    logger.info(url);
-    wahapediaSvc.getSubFactions(url);
-    //wahapediaSvc.getFactions();
-    res.writeHead(200, {'Content-Type': 'application/json'});
-    let result = {status: "OK"};
-    res.end(JSON.stringify(result));    
-});
-
 module.exports = router;
