# swagger.json
@@ -29,12 +29,12 @@
     }  
   ],
   "paths": {
-     "/roster/validate" : {
+    "/roster/save" : {
       "post" : {
         "tags" : [ "roster-api" ],
-        "summary" : "Validate Roster",
-        "description" : "Valida el Roster de Battlescribe contra Challonge, wahapedia.ru",
-        "operationId" : "validateRoster",
+        "summary" : "Save Roster",
+        "description" : "Guarda el Roster de Battlescribe en Mongodb",
+        "operationId" : "saveRoster",
         "consumes" : [ "multipart/form-data" ],
         "produces" : [ "application/json" ],
         "parameters" : [ 
@@ -45,23 +45,49 @@
           "required" : true,
           "type" : "string",
           "default" : "{status:'VALIDATE', name:'Astra Millitarum-OT500-Primaris Psyker'}"
-          }, 
-          {
-            "name" : "saveJson",
-            "in" : "query",
-            "description" : "Flag to activate json to File.",
-            "required" : false,
-            "type" : "string",
-            "default" : "false"
           },
           {
             "name" : "roster_file",
             "in" : "formData",
-            "description" : "File Roster here. (ros extension xml)",
+            "description" : "File Roster here. (ros extension)",
             "required" : true,
             "type" : "file"          
             }
           ],
+        "responses" : {
+          "200" : {
+            "description" : "Resultado de la lista de tournaments[]",
+            "schema" : {
+              "type" : "array",
+              "items" : {
+                "$ref" : "#/definitions/Roster"
+              }
+            }
+          },
+          "400" : {
+            "description" : "Mala petición"
+          }
+        }
+      }
+    },
+     "/roster/validate" : {
+      "post" : {
+        "tags" : [ "roster-api" ],
+        "summary" : "Validate Roster",
+        "description" : "Valida el Roster de Battlescribe contra Challonge, wahapedia.ru",
+        "operationId" : "validateRoster",
+        "consumes" : [ "application/json" ],
+        "produces" : [ "application/json" ],
+        "parameters" : [ 
+          {
+          "name" : "roster_json",
+          "in" : "formData",
+          "description" : "Json Roster here.",
+          "required" : true,
+          "type" : "string",
+          "default" : "{status:'VALIDATE', name:'Astra Millitarum-OT500-Primaris Psyker'}"
+          }
+        ],
         "responses" : {
           "200" : {
             "description" : "Resultado de la lista de tournaments[]",
@@ -89,41 +115,6 @@
         "produces": [
           "application/json"
         ],
-        "responses": {
-          "200": {
-            "description": "Resultado de exec del servicio",
-            "schema": {
-              "name" : "result",
-              "type": "string"
-            }
-          },
-          "400": {
-            "description": "Mala petición"
-          }
-        }
-      }
-    },    
-    "/wahapedia/subFactions": {
-      "get": {
-        "tags": [
-          "wahapedia-api"
-        ],
-        "summary": "Lista de Facciones y SubFacciones",
-        "operationId": "getFactions",
-        "description": "Obtiene la lista de Facciones y SubFacciones en Wahapedia.\n",
-        "produces": [
-          "application/json"
-        ],
-        "parameters" : [ 
-          {
-            "name" : "faction",
-            "in" : "query",
-            "description" : "Faction Name",
-            "required" : true,
-            "type" : "string",
-            "default" : "chaos-space-marines"
-          }
-        ],        
         "responses": {
           "200": {
             "description": "Resultado de exec del servicio",
